--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
       
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="http://izdatwebsite.x10host.com">IzDatwebsite</a></li>
+        <li><a href="https://l3n0ire.github.io/izdatwebsitev1/"">IzDatwebsite</a></li>
         <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Chat Sites<span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="http://izdatwebsite.x10host.com/chat/desk.php">Desktop Chat</a></li>
@@ -121,7 +121,7 @@
 
 <div class="container">
 	<div class="row">
-      <div class="col-md-12 text-center"><p>Copyright &copy 2016 Colin Lin</p></div>
+      <div class="col-md-12 text-center"><p>Copyright &copy 2018 Colin Lin</p></div>
     </div>
 </div>
 	</div>
